# fuzzing

./: CMakeLists.txt  README.md  main.c  utility.c  utility.h
.github/workflows/: ci-fuzzing.yml
tests/: CMakeLists.txt  utility_fuzzer_test.c  utility_test.c
